update compr test

--- a/extract_patches.ipynb
+++ b/extract_patches.ipynb
@@ -24,8 +24,8 @@
    "source": [
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "if not os.path.exists(robust_root):\n",
-    "    os.makedirs(robust_root)"
+    "if not os.path.exists(patches_root):\n",
+    "    os.makedirs(patches_root)"
    ]
   },
   {
@@ -37,7 +37,7 @@
     "data = pd.read_csv(dresden_csv)\n",
     "\n",
     "# Here I only use Canon for experiment\n",
-    "data = data[(data['brand'] == 'Agfa') | (data['brand'] == 'Canon')]"
+    "data = data[(data['brand'] == 'Nikon') |(data['brand'] == 'Sony') | (data['brand'] == 'Canon')]"
    ]
   },
   {
