--- a/ins_test.ipynb
+++ b/ins_test.ipynb
@@ -27,28 +27,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/gary/anaconda3/envs/cam/lib/python3.7/site-packages/pandas/core/ops/array_ops.py:253: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  res_values = method(rvalues)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create output folder if needed\n",
     "if not os.path.exists(dresden_images_root):\n",
     "    os.makedirs(dresden_images_root)\n",
     "\n",
     "data = pd.read_csv(dresden_csv)\n",
+    "data = data[(data['brand'] == 'Canon') & (data['instance'] == 0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if the size of all images are not zero, then append to the list\n",
+    "if all(img.shape[:2]):\n",
+    "    count += 1\n",
+    "    brand_model = '_'.join([brand, model])\n",
+    "    brand_model_list.append(brand_model) \n",
+    "    path_list.append(filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a images database as a dictionary\n",
+    "images_db = {\n",
+    "    'brand_model': np.asarray(brand_model_list).flatten(),\n",
+    "    'path': np.asarray(path_list).flatten(),\n",
+    "}\n",
+    "np.save(images_db_path, images_db)\n",
     "\n",
-    "# Here I only use Canon for experiment\n",
-    "# data = data[(data['brand'] == 'Agfa') | (data['brand'] == 'Canon')]\n",
-    "data = data[(data['brand'] == 'Sony') | (data['brand'] == 'Nikon') | (data['brand'] == 'Canon')]"
+    "print('Completed.')"
    ]
   },
   {
