--- a/env.ipynb
+++ b/env.ipynb
@@ -20,32 +20,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-121935633d314aec\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-121935633d314aec\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          url.port = 6007;\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "  "
+      ],
       "text/plain": [
-       "ERROR: Failed to launch TensorBoard (exited with 1).\n",
-       "Contents of stderr:\n",
-       "Serving TensorBoard on localhost; to expose to the network, use a proxy or pass --bind_all\n",
-       "TensorBoard 2.0.0 at http://localhost:6006/ (Press CTRL+C to quit)\n",
-       "Traceback (most recent call last):\n",
-       "  File \"/home/pan/anaconda3/envs/cam/bin/tensorboard\", line 10, in <module>\n",
-       "    sys.exit(run_main())\n",
-       "  File \"/home/pan/anaconda3/envs/cam/lib/python3.7/site-packages/tensorboard/main.py\", line 64, in run_main\n",
-       "    app.run(tensorboard.main, flags_parser=tensorboard.configure)\n",
-       "  File \"/home/pan/anaconda3/envs/cam/lib/python3.7/site-packages/absl/app.py\", line 299, in run\n",
-       "    _run_main(main, args)\n",
-       "  File \"/home/pan/anaconda3/envs/cam/lib/python3.7/site-packages/absl/app.py\", line 250, in _run_main\n",
-       "    sys.exit(main(argv))\n",
-       "  File \"/home/pan/anaconda3/envs/cam/lib/python3.7/site-packages/tensorboard/program.py\", line 222, in main\n",
-       "    self._register_info(server)\n",
-       "  File \"/home/pan/anaconda3/envs/cam/lib/python3.7/site-packages/tensorboard/program.py\", line 268, in _register_info\n",
-       "    manager.write_info_file(info)\n",
-       "  File \"/home/pan/anaconda3/envs/cam/lib/python3.7/site-packages/tensorboard/manager.py\", line 268, in write_info_file\n",
-       "    with open(_get_info_file_path(), \"w\") as outfile:\n",
-       "PermissionError: [Errno 13] Permission denied: '/tmp/.tensorboard-info/pid-3515.info'"
+       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
@@ -53,7 +48,7 @@
     }
    ],
    "source": [
-    "%tensorboard --logdir=log/fit"
+    "%tensorboard --logdir=logs/fit"
    ]
   },
   {
