--- a/database.ipynb
+++ b/database.ipynb
@@ -7,12 +7,9 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import urllib\n",
     "import pandas as pd\n",
-    "from skimage import io\n",
-    "from tqdm import tqdm\n",
-    "import numpy as np\n",
-    "from params import dresden_images_root, dresden_csv, images_db_path"
+    "from func import download\n",
+    "from params import dresden_images_root, dresden_csv, train_csv_path, unseen_csv_path"
    ]
   },
   {
@@ -21,106 +18,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_list = []\n",
-    "brand_model_list = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/gary/anaconda3/envs/cam/lib/python3.7/site-packages/pandas/core/ops/array_ops.py:253: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  res_values = method(rvalues)\n"
-     ]
-    }
-   ],
-   "source": [
     "# Create output folder if needed\n",
     "if not os.path.exists(dresden_images_root):\n",
     "    os.makedirs(dresden_images_root)\n",
     "\n",
     "data = pd.read_csv(dresden_csv)\n",
     "\n",
-    "# Here I only use Canon for experiment\n",
-    "# data = data[(data['brand'] == 'Agfa') | (data['brand'] == 'Canon')]\n",
-    "data = data[(data['brand'] == 'Sony') | (data['brand'] == 'Nikon') | (data['brand'] == 'Canon')]"
+    "train_model = ['Ixus70', 'D200', 'mju-1050SW']\n",
+    "unseen_model = ['Ixus55', 'D70', 'PowerShotA640', 'L74wide', 'DSC-W170']\n",
+    "\n",
+    "train_data = data[([model in train_model for model in data['model']])]\n",
+    "unseen_data = data[([model in unseen_model for model in data['model']])]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_rows = []\n",
-    "for i in range((data.shape[0])): \n",
-    "    csv_rows.append(list(data.iloc[i, :])) "
+    "download(train_data, dresden_images_root, train_csv_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "count = 0\n",
-    "for csv_row in tqdm(csv_rows):\n",
-    "\n",
-    "    filename, brand, model = csv_row[0:3]\n",
-    "    url = csv_row[-1]\n",
-    "\n",
-    "    file_path = os.path.join(dresden_images_root,filename)\n",
-    "\n",
-    "    try:\n",
-    "        if not os.path.exists(file_path):\n",
-    "            print('Downloading {:}'.format(filename))\n",
-    "            urllib.request.urlretrieve(url, file_path)\n",
-    "\n",
-    "        # Load the image and check its dimensions\n",
-    "        img = io.imread(file_path)\n",
-    "\n",
-    "        if img is None or not isinstance(img, np.ndarray):\n",
-    "            print('Unable to read image: {:}'.format(filename))\n",
-    "            # removes (deletes) the file path\n",
-    "            os.unlink(file_path)\n",
-    "\n",
-    "        # if the size of all images are not zero, then append to the list\n",
-    "        if all(img.shape[:2]):\n",
-    "            count += 1\n",
-    "            brand_model = '_'.join([brand, model])\n",
-    "            brand_model_list.append(brand_model) \n",
-    "            path_list.append(filename)\n",
-    "\n",
-    "        else:\n",
-    "            print('Zero-sized image: {:}'.format(filename))\n",
-    "            os.unlink(file_path)\n",
-    "\n",
-    "    except IOError:\n",
-    "        print('Unable to decode: {:}'.format(filename))\n",
-    "        os.unlink(file_path)\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print('Error while loading: {:}'.format(filename))\n",
-    "        if os.path.exists(file_path):\n",
-    "            os.unlink(file_path)\n",
-    "\n",
-    "print('Number of images: {:}'.format(len(path_list)))\n",
-    "\n",
-    "print('Saving db to: {:}'.format(images_db_path))\n",
-    "\n",
-    "# create a images database as a dictionary\n",
-    "images_db = {\n",
-    "    'brand_model': np.asarray(brand_model_list).flatten(),\n",
-    "    'path': np.asarray(path_list).flatten(),\n",
-    "}\n",
-    "np.save(images_db_path, images_db)\n",
-    "\n",
-    "print('Completed.')"
+    "download(unseen_data, dresden_images_root, unseen_csv_path)"
    ]
   }
  ],
