--- a/extract_patches.ipynb
+++ b/extract_patches.ipynb
@@ -8,11 +8,12 @@
    "source": [
     "import os\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import warnings\n",
     "import split_extract\n",
     "from multiprocessing import Pool\n",
     "from tqdm import tqdm\n",
-    "from params import dresden_images_root, images_db_path, patch_span, \\\n",
+    "from params import dresden_images_root, train_csv_path, patch_span, \\\n",
     "        patch_num, patches_root, patches_db_path"
    ]
   },
@@ -37,23 +38,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Canon_Ixus55 in training set: 156.\n",
-      "Canon_Ixus55 in validation set: 27.\n",
-      "Canon_Ixus55 in test set: 41.\n",
+      "Canon_Ixus70 in training set: 352.\n",
+      "Canon_Ixus70 in validation set: 103.\n",
+      "Canon_Ixus70 in test set: 112.\n",
       "\n",
-      "Canon_Ixus70 in training set: 350.\n",
-      "Canon_Ixus70 in validation set: 94.\n",
-      "Canon_Ixus70 in test set: 123.\n",
+      "Nikon_D200 in training set: 490.\n",
+      "Nikon_D200 in validation set: 113.\n",
+      "Nikon_D200 in test set: 149.\n",
       "\n",
-      "Canon_PowerShotA640 in training set: 122.\n",
-      "Canon_PowerShotA640 in validation set: 35.\n",
-      "Canon_PowerShotA640 in test set: 31.\n",
+      "Olympus_mju-1050SW in training set: 669.\n",
+      "Olympus_mju-1050SW in validation set: 161.\n",
+      "Olympus_mju-1050SW in test set: 210.\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "images_db = np.load(images_db_path, allow_pickle=True).item()\n",
+    "images_db = pd.read_csv(train_csv_path)\n",
     "\n",
     "model_list = np.unique(images_db['brand_model'])\n",
     "img_list = images_db['path']\n",
@@ -70,16 +71,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "979it [00:00, 12163.78it/s]"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -88,20 +82,14 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting training patches...\n",
-      "Extracting validation patches...\n",
-      "Extracting testing patches...\n",
-      "Completed.\n"
+     "ename": "NameError",
+     "evalue": "name 'images_db' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-bcae0924e5ea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mimg_brand_model\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mimg_path\u001b[0m \u001b[0;32min\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mtqdm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimages_db\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'brand_model'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimages_db\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'path'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mimg_path\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtrain_list\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'images_db' is not defined"
      ]
     }
    ],
