--- a/train.ipynb
+++ b/train.ipynb
@@ -82,23 +82,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Num GPUs Available:  1\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Num GPUs Available: \", len(tf.config.experimental.list_physical_devices('GPU')))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -22439,7 +22422,7 @@
     "    monitor='acc',verbose=1, save_best_only=False,\n",
     "    save_freq=1), ConstrainLayer, tensorboard_callback]\n",
     "\n",
-    "history = model.fit_generator(generator=train_data_gen, epochs=45, workers=10,\n",
+    "history = model.fit(x=train_data_gen, validation_data=validation_data_gen, epochs=45, workers=10,\n",
     "     callbacks=callbacks)  #removed validation data"
    ]
   },
