--- a/extract_patches.ipynb
+++ b/extract_patches.ipynb
@@ -10,11 +10,11 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import warnings\n",
-    "import split_extract\n",
+    "import func\n",
     "from multiprocessing import Pool\n",
     "from tqdm import tqdm\n",
     "from params import dresden_images_root, train_csv_path, patch_span, \\\n",
-    "        patch_num, patches_root, patches_db_path"
+    "        patch_num, patches_root, patches_db_path, weights_path"
    ]
   },
   {
@@ -60,13 +60,18 @@
     "img_list = images_db['path']\n",
     "\n",
     "if not os.path.exists(patches_db_path):\n",
-    "    train_list, val_list, test_list = split_extract.split(img_list, model_list, patches_db_path)\n",
+    "    train_list, val_list, test_list = func.split(img_list, model_list, patches_db_path)\n",
     "else:\n",
     "    patches_db = np.load(patches_db_path, allow_pickle=True).item()\n",
     "    train_list = patches_db['train']\n",
     "    val_list = patches_db['val']\n",
     "    test_list = patches_db['test']\n",
-    "    split_extract.split_info(train_list, val_list, test_list, model_list)"
+    "    info, weights = func.split_info(train_list, val_list, test_list, \n",
+    "                                       model_list, total=len(img_list))\n",
+    "\n",
+    "# store class weight to csv\n",
+    "df = pd.DataFrame([weights], columns=range(len(model_list)))\n",
+    "df.to_csv(weights_path, index=False)"
    ]
   },
   {
@@ -75,74 +80,26 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Collecting image data...\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'images_db' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-bcae0924e5ea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mimg_brand_model\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mimg_path\u001b[0m \u001b[0;32min\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mtqdm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimages_db\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'brand_model'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimages_db\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'path'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mimg_path\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtrain_list\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'images_db' is not defined"
+      "100%|██████████| 352/352 [00:00<00:00, 346003.05it/s]\n",
+      "100%|██████████| 103/103 [00:00<00:00, 43158.17it/s]\n",
+      "100%|██████████| 112/112 [00:00<00:00, 132626.21it/s]\n",
+      "100%|██████████| 490/490 [00:00<00:00, 175254.45it/s]\n",
+      "100%|██████████| 113/113 [00:00<00:00, 138746.00it/s]\n",
+      "100%|██████████| 149/149 [00:00<00:00, 272785.38it/s]\n",
+      "100%|██████████| 669/669 [00:00<00:00, 525367.79it/s]\n",
+      "100%|██████████| 161/161 [00:00<00:00, 256079.99it/s]\n",
+      "100%|██████████| 210/210 [00:00<00:00, 329889.08it/s]\n"
      ]
     }
    ],
    "source": [
-    "print('Collecting image data...')\n",
-    "train_imgs_list = []\n",
-    "val_imgs_list = []\n",
-    "test_imgs_list = []\n",
-    "\n",
-    "for img_brand_model,img_path in \\\n",
-    "    tqdm(zip(images_db['brand_model'], images_db['path'])):\n",
-    "                   \n",
-    "    if img_path in train_list:\n",
-    "        train_imgs_list += [{'data_set':'train',\n",
-    "                           'img_path':img_path,\n",
-    "                           'img_brand_model':img_brand_model,\n",
-    "                           'patch_span':patch_span,\n",
-    "                           'patch_num':patch_num,\n",
-    "                           'patch_root': patches_root,\n",
-    "                           'img_root': dresden_images_root\n",
-    "                           }]\n",
-    "        \n",
-    "    elif img_path in val_list:\n",
-    "        val_imgs_list += [{'data_set':'val',\n",
-    "                           'img_path':img_path,\n",
-    "                           'img_brand_model':img_brand_model,\n",
-    "                           'patch_span':patch_span,\n",
-    "                           'patch_num':patch_num,\n",
-    "                           'patch_root': patches_root,\n",
-    "                           'img_root': dresden_images_root\n",
-    "                           }]\n",
-    "        \n",
-    "    else:\n",
-    "        test_imgs_list += [{'data_set':'test',\n",
-    "                           'img_path':img_path,\n",
-    "                           'img_brand_model':img_brand_model,\n",
-    "                           'patch_span':patch_span,\n",
-    "                           'patch_num':patch_num,\n",
-    "                           'patch_root': patches_root,\n",
-    "                           'img_root': dresden_images_root\n",
-    "                           }]\n",
-    "\n",
-    "# num_processes = 12\n",
-    "num_processes = 4\n",
-    "pool = Pool(processes=num_processes)\n",
-    "\n",
-    "print('Extracting training patches...')\n",
-    "train_paths = pool.map(split_extract.extract, train_imgs_list)\n",
-    "print('Extracting validation patches...')\n",
-    "val_paths = pool.map(split_extract.extract, val_imgs_list)\n",
-    "print('Extracting testing patches...')\n",
-    "test_paths = pool.map(split_extract.extract, test_imgs_list)\n",
-    "print('Completed.')"
+    "for i in range(len(model_list)):\n",
+    "    func.patch(model_list[i], info[i][0], 'train')\n",
+    "    func.patch(model_list[i], info[i][1], 'val')\n",
+    "    func.patch(model_list[i], info[i][2], 'test')"
    ]
   }
  ],
