update generating tex figures

--- a/train.ipynb
+++ b/train.ipynb
@@ -154,7 +154,7 @@
     "ConstrainLayer = network.ConstrainLayer(model)\n",
     "callbacks = [ModelCheckpoint('./saved_model/weights.{epoch:02d}.h5',\n",
     "    monitor='acc',verbose=1, save_best_only=False,\n",
-    "    save_freq=1), ConstrainLayer, tensorboard_callback]\n",
+    "    save_freq='epoch'), ConstrainLayer, tensorboard_callback]\n",
     "\n",
     "df = pd.read_csv(weights_path)\n",
     "class_weight = df.to_dict('records')[0]\n",
