--- a/Robustness of CNN-based camera model identification/Robustness of CNN-based camera model identification.tex
+++ b/Robustness of CNN-based camera model identification/Robustness of CNN-based camera model identification.tex
@@ -1,5 +1,6 @@
 \documentclass[a4paper, 9pt, twocolumn]{extarticle}
 \usepackage{amsmath,graphicx,amssymb,cite}
+\usepackage{bm}
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 \usepackage[numbers]{natbib}
@@ -73,9 +74,9 @@ In multimedia forensics, camera model identification is an important task for va
 \label{section:introduction}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Multimedia information, such as digital images, is frequently used in numerous important settings, such as evidence in legal proceedings, criminal investigations, and military and defense scenarios. The goal of camera model identification is to determine the make and model of the source camera. By exploiting the subtle artifacts and traces that relate to the camera model, researchers can build learning-based models that learn from this characteristics of cameras. Most of these methods have great performances in experiments. However, one of the disadvantages of learning-based methods is that they are sensitive to out-of-distribution data, i.e., if a test image is too different from the training set images, it's hard for this method to find out these characteristics. For example, there are lots of images in social media which are re-compressed or manipulated, if we try to identify these images using a model trained on other data, which only include limited types of re-compression and manipulations, the result would be affected by the unseen manipulations and re-compression.
+Multimedia information, such as digital images, is frequently used in numerous important settings, such as evidence in legal proceedings, criminal investigations, and military and defense scenarios. The goal of camera model identification is to determine the make and model of the source camera. By exploiting the subtle artifacts and traces that relate to the camera model, researchers can build learning-based models that learn from this characteristics of cameras. Most of these methods have great performances in experiments. However, one of the disadvantages of learning-based methods is that they are sensitive to out-of-distribution data, i.e., if a test image is too different from the training set images, it's hard for this method to find out these characteristics. For example, there are lots of images in social media which are re-compressed or have been altered from their original recording, if we try to identify these images using a model trained on other data, which only include limited types of re-compression and manipulations, the result would be affected by the unseen manipulations and re-compression.
 
-In this work, we want to test the robustness of a CNN-based camera model classifier in three different situations: \textbf{images from unseen camera models}, \textbf{post-processed images} and \textbf{images from different devices}. To evaluate the robustness of the classifier, we use the \textbf{accuracy of the classifier}, and the \textbf{mean confidence of the output}. Note that we use the maximal values of the softmax output as confidence of the prediction. So if the CNN has high mean confidence and low variance, it could be consider that the classifier is confident about it's decision. Otherwise, the classifier is confused by the input.
+In this work, we want to test the robustness of a CNN-based camera model classifier in three different situations: \textbf{images from unseen camera models}, \textbf{post-processed images} and \textbf{images from different devices}. To evaluate the robustness of the classifier, we use the \textbf{accuracy of the classifier}, and the \textbf{mean confidence of the output}. Note that we use the maximal value of the softmax output as confidence of the prediction. So if the CNN has high mean confidence and low variance, it could be considered that the classifier is confident about its decision. Otherwise, the classifier is confused by the input.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Camera model identification}
@@ -153,23 +154,23 @@ Typically, CNN architectures operating on images are trained to learn discrimina
 
 The baseline architecture we use is shown in Figure \ref{fig:cnn}. We can see that the baseline architecture consists of one constrained convolutional layer which is followed directly by four convolutional layers and three fully connected layers. All the regular convolutional layers are followed by a batch normalization layer \cite{ioffe2015batch}, rectified linear unit activation function \cite{nair2010rectified} and a max-pooling layer. The last layer is a softmax activation function and the class of the input image corresponds to the highest activated neuron in the output layer. In this work, the input layer of our CNN is the green channel of an image patch sized 256 $ \times $ 256 pixels. The constrained convolutional layer extracts the high frequency characteristics from the input images. Then the high-level features of these characteristics will be extracted through the following hidden convolutional layers.
 
-As we mentioned above, common CNN architectures doesn't suppress the content of images and it may correlate the image's content in the training set with the image models, which is unwanted. 
+As we mentioned above, common CNN architectures do not suppress the content of images and it may correlate the image's content in the training set with the camera models, which is unwanted. 
 
-The constrained convolutional layer by \citet{10.1145/2909827.2930786} is to combat this issue, it can not only suppress the image's content, but also adaptively learn pixel values dependencies while training CNN. The pseudocode of the training is given in Algorithm \ref{alg:constrained}. 
+The constrained convolutional layer by \citet{10.1145/2909827.2930786} is to combat this issue, it can not only suppress the image's content, but also adaptively learn pixel values dependencies while training CNN. The pseudocode of the training is given in Algorithm \ref{alg:constrained}. Note that $ \bm{a}_k^{(1)} $ is one of the $ K $ filter kernels in the constrained convolutional layer.
 
 \begin{algorithm} 
 	\caption{Training algorithm for constrained convolutional layer}
 	\label{alg:constrained}
 	\begin{algorithmic}[1]
-		\State \textit{Initilize} $ a_k $ \textit{’s using randomly drawn weights}
+		\State \textit{Initilize} $ \bm{a}_k $ \textit{’s using randomly drawn weights}
 		\State i = 1
-		\While {$ i \leq max_{iter	} $}	
+		\While {$ i \leq max\_iter $}	
 		\State \textit{Do feedforward pass}
 		\State \textit{Update filter weights through stochastic gradient \\ 
 			\ \ \ \ descent and backpropagate errors}
-		\State \textit{Set $ a_k^{(1)}(0, 0) = 0 $ for all $ K $ filters}
-		\State \textit{Normalize $ a_k^{(1)} $ such that $ \sum_{l,m \neq 0} a_k^{(1)}(l, m) = 1 $ }
-		\State \textit{Set $ a_k^{(1)}(0, 0) = -1 $ for all $ K $ filters}
+		\State \textit{Set $ \bm{a}_k^{(1)}(0, 0) = 0 $ for all $ K $ filters}
+		\State \textit{Normalize $ \bm{a}_k^{(1)} $ such that $ \sum_{l,m \neq 0} \bm{a}_k^{(1)}(l, m) = 1 $ }
+		\State \textit{Set $ \bm{a}_k^{(1)}(0, 0) = -1 $ for all $ K $ filters}
 		i = i + 1
 		\If{training accuracy converges}
 			\State exit
@@ -190,7 +191,7 @@ In this part, we show an experimental study about the impact of different test d
 \label{section:Data collection & Training}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-We choose images from the dresden image database \cite{10.1145/1774088.1774427} as our training set. More specifically, we pick the images from three models: 567 images of \textbf{Canon Ixus70}, 752 images of \textbf{Nikon D200} and 1040 images of \textbf{Olympus mju-1050SW}, in total 2359 images, such that they all share similar image contents.
+We choose images from the dresden image database \cite{10.1145/1774088.1774427} as our training set. More specifically, we pick the images from three models: 567 images of \textbf{Canon Ixus70}, 752 images of \textbf{Nikon D200} and 1,040 images of \textbf{Olympus mju-1050SW}, in total 2359 images, such that they all share similar image contents.
 
 To train our CNN, we first randomly select 1,887 images from our experimental database. Next, we divide these images into $ 256 \times 256 $ pixel patches and retain the central 25 patches from the green channel of each image for our training database. In this database, each block corresponds to a new image that has its corresponding camera model label. In total, our training database consists of 47,175 patches.
 
@@ -208,9 +209,11 @@ Finally, to evaluate the performance of our CNN, we created a testing database b
 \label{section:Result}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-We randomly select 6,400 patches from our testing database, the camera models Canon Ixus70, Nikon D200 and Olympus mju-1050SW have respectively 1,403, 1,938 and 3,059 images. Note that there are more Olympus mju-1050SW images than the others in our testing database. The accuracy of our CNN architecture for each camera model is shown in Table \ref{tab:train}, it turns out the model has high overall accuracy up to 99.90\%. 
+We randomly select 12,800 patches from our testing database, the camera models Canon Ixus70, Nikon D200 and Olympus mju-1050SW have respectively 2,824, 3,849 and 6,126 images. Note that there are more Olympus mju-1050SW images than the others in our testing database. The accuracy of our CNN architecture for each camera model is shown in Table \ref{tab:train}, it turns out the model has high overall accuracy up to 99.90\%. 
 
-As we can see, Figure \ref{fig:test confidence} depicts the mean and variance of the confidence for each class. For the classes Canon Ixus70 and Olympus mju-1050SW, our CNN classifies them correctly with confidence of 1. In the case of Nikon D200, it has small number of misclassifications, whose mean confidence are 0.82 for Canon Ixus70 and 0.76 for Olympus mju-1050SW. Considering it has 99.69\% accuracy, it could be interpreted that our CNN is confident and makes the correct prediction for most of the cases, but it could still be confused by some exceptions.
+As we can see, Figure \ref{fig:test confidence} depicts the mean and variance of the confidence for each class.For the classes Canon Ixus70 and Olympus mju-1050SW, our CNN classifies them correctly with 1.00 confidence. In the case of Nikon D200, it has small number of misclassifications, whose mean confidence is 0.82 for Canon Ixus70 and 0.76 for Olympus mju-1050SW. Considering it has 99.69\% accuracy, it could be interpreted that our CNN is confident and makes the correct prediction for most of the cases, but it could still be confused by some exceptions.
+
+The accuracy of Nikon D200 is lower than the other two models while having up to at least 0.76 mean confidence for misclassifications. One possible explanation for this could be that there are some images from Nikon D200 in the testing data set has similar high frequency characteristics as the other two models.
 
 \begin{table}
 	\center
@@ -218,9 +221,9 @@ As we can see, Figure \ref{fig:test confidence} depicts the mean and variance of
 		\hline
 		Camera models & Accuracy & Number of images\\
 		\hline
-		Canon Ixus70 & 100\% & 1,403 \\
-		Nikon D200 & 99.69\% & 1,938 \\
-		Olympus mju-1050SW & 100\% & 3,059 \\
+		Canon Ixus70 & 100\% & 2,824 \\
+		Nikon D200 & 99.69\% & 3,849 \\
+		Olympus mju-1050SW & 100\% & 6,126 \\
 		\hline
 		Overall Accuracy & \multicolumn{2}{c|}{99.90\%} \\
 		\hline
@@ -242,14 +245,14 @@ As we can see, Figure \ref{fig:test confidence} depicts the mean and variance of
 \label{section:unseen}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-This experiment is to test the impact of images from unseen camera models on the robustness of our classifier. Note that in this experiment our classifier classifies the input images from the five testing camera models as one of the three training camera models, as we trained our model on a closed set classification task using the mutual exclusive class labels $\mathcal{C} = \{\text{Canon Ixus70}, \text{Nikon D200}, \text{Olympus mju-1050SW}\}$. Since the output labels are all different from the input labels, the classifier should make decision without high confidence if it is robust to image from unseen camera model. It could be interpreted that the classifier cannot be sure which model the image comes from.
+This experiment is to test the impact of images from unseen camera models on the robustness of our classifier. The goal of this experiment is to see how our CNN classifies the images from unseen camera models. Note that in this experiment our model classifies the input images from the five testing camera models as one of the three training camera models, as we trained our model on a closed set classification task using the mutual exclusive class labels $\mathcal{C} = \{\text{Canon Ixus70}, \text{Nikon D200}, \text{Olympus mju-1050SW}\}$. Since the ground truth is different from the label set $\mathcal{C}$, the classifier should make decision without high confidence if it is robust to images from unseen camera models. It could be interpreted that the classifier cannot be sure which model the image comes from.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection*{Data collection}
 \label{section:unseen data collection & Training}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-As shown in Table \ref{tab:makes}, we choose five more models in the the dresden image database, which are \textbf{Agfa DC-830i}, \textbf{Canon Ixus55}, \textbf{Canon PowershotA640}, \textbf{Nikon D70} and \textbf{Sony W170}. In order to see if the brand and image content affect the result of our classifier, these five models have different relations to the training models in terms of brand and image contents. These 1,549 images are also divided into $ 256 \times 256 $ patches in the same manner mentioned before. In total, our unseen database has of 38,725 patches.
+As shown in Table \ref{tab:makes}, we choose five more models in the dresden image database, which are \textbf{Agfa DC-830i}, \textbf{Canon Ixus55}, \textbf{Canon PowershotA640}, \textbf{Nikon D70} and \textbf{Sony W170}. In order to see if the brand and image content affect the result of our classifier, these five models have different relations to the training models in terms of brand and image contents. These 1,549 images are also divided into $ 256 \times 256 $ patches in the same manner mentioned before. In total, our unseen database consists of 38,725 patches.
 
 \begin{table}
 	\center
@@ -266,7 +269,7 @@ As shown in Table \ref{tab:makes}, we choose five more models in the the dresden
 		\multicolumn{3}{|c|}{Total number of images} & 1,549 \\
 		\hline
 	\end{tabular}
-	\caption{\label{tab:makes} Five unseen camera models with different relations in terms of brand and image content. The rightmost column shows the number of testing images from the corresponding camera model. Note that the images here are full sized images.}
+	\caption{\label{tab:makes} Five unseen camera models with different relations in terms of brand and image's content. The rightmost column shows the number of testing images from the corresponding camera model. Note that the images here are full sized images.}
 \end{table}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -274,7 +277,7 @@ As shown in Table \ref{tab:makes}, we choose five more models in the the dresden
 \label{section:unseen result}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-We randomly selected 6,400 patches from our unseen database and evaluate the classifier's most likely class prediction, as well as its prediction confidence, which is shown in Figure \ref{fig:unseen result} and \ref{fig:unseen confidence}, respectively. 
+We randomly selected 6,400 patches from our unseen database, and evaluate the classifier's most likely class prediction, as well as its prediction confidence, which is shown in Figure \ref{fig:unseen result} and \ref{fig:unseen confidence}, respectively. 
 
 \begin{figure}
 	\centering
@@ -285,7 +288,7 @@ We randomly selected 6,400 patches from our unseen database and evaluate the cla
 	\label{fig:unseen result}
 \end{figure} 
 
-We can notice that for the two Canon cameras, Canon Ixus55 and Canon PowerShotA640, the classifier classifies almost all the images from these two models as Canon Ixus 70, which has the same manufacturer as the two models. The mean prediction confidence of Canon Ixus55 and Canon PowerShotA640 are both equal or higher than $ 0.91 $, so it implies that the classifier is confident about the decisions it makes. However, there is difference between the prediction result of these two camera models. For the images from Canon Ixus55, the classifier tends to classify a small number of images as Olympus mju-1050SW, while for images from Canon PowerShotA640, as Nikon D200. In addition, the image contents of Canon Ixus55 are similar to the training set while Canon PowerShotA640 are different. Nevertheless, it seems this difference does not affect the result of these two camera models' images.
+We can notice that for the two Canon cameras, Canon Ixus55 and Canon PowerShotA640, our model classifies almost all the images from these two models as Canon Ixus 70, which has the same manufacturer as the two models. The mean prediction confidence of Canon Ixus55 and Canon PowerShotA640 are both equal or higher than $ 0.91 $, so it implies that the classifier is confident about the decisions it makes. However, there is difference between the prediction result of these two camera models. For the images from Canon Ixus55, the classifier tends to classify a small number of images as Olympus mju-1050SW, while for images from Canon PowerShotA640, as Nikon D200. In addition, the image contents of Canon Ixus55 are similar to the training set while Canon PowerShotA640 are different. Nevertheless, it seems this difference does not affect the result of these two camera models' images.
 
 \begin{figure}
 	\centering
@@ -296,16 +299,16 @@ We can notice that for the two Canon cameras, Canon Ixus55 and Canon PowerShotA6
 	\label{fig:unseen confidence}
 \end{figure}
 
-Similar result is also shown for images from Nikon D70. Our classifier tends to classify them as image from Nikon D200. It could be the reason that Nikon D70 and Nikon D200 both have the same manufacturer. As for the rest 3,077 images from the other two camera models, Agfa DC-830i and Sony DSC-W170, out of these 2,238 are classified as Canon Ixus70, which makes about 72.7\%. Besides, when the classifier classifies the images from these three camera models as Canon Ixus70 and Nikon D200, it always has at least 0.90 mean prediction confidence. The mean prediction confidence to Olympus mju-1050SW is also considerable with a value higher than 0.74.
+Similar result is also shown for images from Nikon D70. Our classifier tends to classify them as image from Nikon D200. It could be the reason that Nikon D70 and Nikon D200 both have the same manufacturer. As for rest 3,077 images from the other two camera models, Agfa DC-830i and Sony DSC-W170, out of these 2,238 are classified as Canon Ixus70, which makes about 72.7\%. Besides, when the classifier classifies the images from these three camera models as Canon Ixus70 and Nikon D200, it always has at least 0.90 mean prediction confidence. The mean prediction confidence to Olympus mju-1050SW is also considerable with a value higher than 0.74.
 
-For all images of the unseen test models, the result doesn't show a relation to the image content. The explanation for this is the usage of constrained convolutional layer, which extracts the high frequency characteristics of the camera instead of the scenes and objects of the images.
+For all images of the unseen test models, the result doesn't show a relation to the image content. The explanation for this is the usage of constrained convolutional layer, which extract the high frequency characteristic of the camera instead of the scenes and objects of the images.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection*{Summary}
 \label{section:unseen summary}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-In this set of experiment, we have shown that the CNN-based camera model classifier is affected by the manufacturer of the camera models and it is robust to the contents due to the constrained convolutional layer. However, the classifier makes wrong decision always with high confidence. To some extend, this classifier is not robust to unseen camera models, because it doesn't show "hesitation" while making choices.
+In this set of experiment, we have shown that the CNN-based camera model classifier is affected by the manufacturer of the camera models and it is robust to the contents due to the constrained convolutional layer. However, the classifier makes wrong decision always with high confidence. To some extend, this classifier is not robust to unseen camera models, because it didn't show "hesitation" while making choices.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Post-processed images}
@@ -342,9 +345,9 @@ We perform JPEG compression with a quality factor of 70 on all the patches from 
 
 The classification result of JPEG images is shown in the Figure~\ref{fig:jpeg result}. Compared to the accuracy of Table~\ref{tab:train}, although they are all from the same camera models and also have the same image contents, the overall classification accuracy has dropped significantly after JPEG compression as shown in Table~\ref{tab:jpeg}.
 
-The accuracy of Olympus mju-1050SW has dropped more than 40\%. For Canon Ixus70, it's even more than 50\%. Surprisingly, the accuracy of Nikon D200 only decrease by about 6.5\%, from 99.69\% to 93.21\%, which is much better than the other two models.
+The accuracy of Olympus mju-1050SW has dropped more than 40\%. For Canon Ixus70, it's even more than 50\%. Surprisingly, the accuracy of Nikon D200 only decreased by about 6.5\%, from 99.69\% to 93.21\%, which is much better than the other two models.
 
-In terms of the prediction confidence, the mean confidences of the corresponding correct class are still the highest compared to the other two classes. So the classifier is still more certain when making the correct decision. But comparing Figure~\ref{fig:jpeg confidence} with Figure~\ref{fig:test confidence}, it shows that not only the difference between these mean confidences become greatly smaller except for Nikon D200, but also the confidences for the corresponding correct classes are decreased.
+In terms of the prediction confidence, the mean confidences of the corresponding correct class are still the highest compared to the other two classes. So the classifier is still more certain when making the correct decision. But comparing Figure~\ref{fig:jpeg confidence} with the Figure~\ref{fig:test confidence}, it shows that not only the difference between these mean confidences become greatly smaller except for Nikon D200, but also the confidence for the corresponding correct class is decreased.
 
 \begin{table}
 	\center
@@ -367,7 +370,7 @@ In terms of the prediction confidence, the mean confidences of the corresponding
 	\resizebox{!}{!}{
 		{\input{images/jpeg_result.tex}}
 	}
-	\caption{Prediction to JPEG compressed images with quality factor of 70.}
+	\caption{Prediction of JPEG compressed images with quality factor of 70.}
 	\label{fig:jpeg result}
 \end{figure}
 
@@ -385,14 +388,14 @@ In terms of the prediction confidence, the mean confidences of the corresponding
 \label{section:jpeg summary}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-The result of this experiment shows that, the classifier is robust to the JPEG compressed images from Nikon D200, but it fails when classifying the JPEG compressed images from the other two models. Considering the mean confidence when classifying Nikon D200's images in this experiment doesn't show great difference from Figure~\ref{fig:test confidence}, one possible explanation for this robustness is that compared to the high frequency characteristics left by the camera,  the artifacts caused by the jpeg compression are in different frequency range, such that the classifier consider these artifacts as unimportant when classifying images from Nikon D200. Nevertheless, when the classifier misclassifies images, it is always less sure about its decision compared to when it correctly classifies.
+The result of this experiment shows that, the classifier is robust to the JPEG compressed images from Nikon D200, but it fails when classifying the JPEG compressed images from the other two models. Considering the mean confidence when classifying Nikon D200's images in this experiment doesn't show great difference from Figure~\ref{fig:test confidence}, one possible explanation for the robustness of Nikon D200 is that compared to the high frequency characteristic left by the camera,  the artifacts caused by the jpeg compression are in different frequency range, such that the classifier consider these artifacts as unimportant when classifying images from Nikon D200. Nevertheless, when the classifier misclassifies images, it is always less sure about its decision compared to when it correctly classifies.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection{Additive Gaussian Noise}
 \label{section:noise}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-A Gaussian noise with with zero mean and standard deviation of $ \sigma = 2 $ is added to the patch in the test database in this experiment. To evaluate the robustness of our classifier to additive Gaussian noise, we randomly select 6,400 patches from the test set and distort each patch with this Gaussian noise.
+A Gaussian noise with with zero mean and standard deviation of $ \sigma = 2 $ is added to the patch in the test database in this experiment. To evaluate the robustness of our classifier to additive Gaussian noise, we randomly select 6,400 patches from the test set and distort each patch with zero-mean additive Gaussian noise.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \paragraph{Result}
@@ -424,7 +427,7 @@ As shown in Figure~\ref{fig:noise confidence}, the prediction confidence for Can
 \resizebox{!}{!}{
 	{\input{images/noise_result.tex}}
 }
-\caption{Prediction to images added Gaussian noise with zero-mean and standard deviation $ \sigma = 2 $.}
+\caption{Prediction of images added Gaussian noise with zero-mean and standard deviation $ \sigma = 2 $.}
 \label{fig:noise result}
 \end{figure}
 
@@ -434,7 +437,7 @@ As shown in Figure~\ref{fig:noise confidence}, the prediction confidence for Can
 	\resizebox{!}{!}{
 		{\input{images/noise_conf.tex}}
 	}
-	\caption{Mean prediction confidence to images added Gaussian noise with zero-mean and standard deviation $ \sigma = 2 $.}
+	\caption{Mean prediction confidence of images added Gaussian noise with zero-mean and standard deviation $ \sigma = 2 $.}
 	\label{fig:noise confidence}
 \end{figure}
 
@@ -450,21 +453,21 @@ In this experiment, it shows that the CNN-based camera model classifier is robus
 \label{section:blur}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-A Gaussian blur operation with kernel size of $ 5 \times 5 $ and standard deviation $ \sigma = 1.1 $ is performed on the image patches in the test database. We randomly select 6,400 patches and distort them with this Gaussian filter before using it as input to the classifier.
+A Gaussian blur operation with kernel's size of $ 5 \times 5 $ and standard deviation $ \sigma = 1.1 $ is performed on the image patches in the test database. We randomly select 6,400 patches and distort them with this Gaussian filter before using it as input to the classifier.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \paragraph{Result}
 \label{section:blur result}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-The result of this experiment is shown in Figure~\ref{fig:blur result} and Figure~\ref{fig:blur confidence}. Almost all images from these three models are classified as Nikon D200. In addition, the mean confidence when classifying images as Nikon D200 images are all 1, while for the other two models are low, which are either around 0.6 or 0.
+The result of this experiment is shown in Figure~\ref{fig:blur result} and Figure~\ref{fig:blur confidence}. Almost all images from these three models are classified as Nikon D200. The mean confidence for all images classified as Nikon D200 is 1, while for the other two models is low, which is either around 0.6 or 0.
 
 \begin{figure}
 	\centering
 	\resizebox{!}{!}{
 		{\input{images/blur_result.tex}}
 	}
-	\caption{Prediction to images blurred by Gaussian filter with kernel size of $ 5 \times 5 $ and standard deviation $ \sigma = 1.1 $.}
+	\caption{Prediction of images blurred by Gaussian filter with kernel's size of $ 5 \times 5 $ and standard deviation $ \sigma = 1.1 $.}
 	\label{fig:blur result}
 \end{figure}
 
@@ -473,7 +476,7 @@ The result of this experiment is shown in Figure~\ref{fig:blur result} and Figur
 	\resizebox{!}{!}{
 		{\input{images/blur_conf.tex}}
 	}
-	\caption{Mean prediction confidence to images blurred by Gaussian filter with kernel size of $ 5 \times 5 $ and standard deviation $ \sigma = 1.1 $.}
+	\caption{Prediction confidence of images blurred by Gaussian filter with kernel's size of $ 5 \times 5 $ and standard deviation $ \sigma = 1.1 $.}
 	\label{fig:blur confidence}
 \end{figure}
 
@@ -485,11 +488,11 @@ The result of this experiment is shown in Figure~\ref{fig:blur result} and Figur
 In this section, the results show that the classifier is severely affected by the Gaussian blur operation, which causes it to tend to recognize blurred images as images from Nikon D200. One possible explanation for this could be that the traces left by Nikon D200 has lower frequency compared to the other two images since the Gaussian blur process is a low pass filtering operation.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Different devices from same model}
+\subsection{Different devices for same model}
 \label{section:instance}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-In order to study the robustness of our CNN-based camera model classifier to the device-dependent characteristics, we separate the images of our training set according to models and devices. Each model has more than one devices, more specifically, three devices for Canon Ixus70, two devices for Nikon D200 and five devices for Olympus mju-1050SW. 
+In order to study the robustness of our CNN-based camera model classifier to the device-dependent characteristics, we separate the images of our training set according to models and devices. Each model has more than one device, more specifically, three devices for Canon Ixus70, two devices for Nikon D200 and five devices for Olympus mju-1050SW. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection*{Data Collection \& Training}
@@ -505,7 +508,7 @@ The other images, namely 380 full sized images from Canon Ixus70, 380 from Nikon
 	\resizebox{!}{!}{
 		{\input{images/ins_result.tex}}
 	}
-	\caption{Prediction to images from different devices of same model. The numbers from top to bottom indicate the number of images classified as Olympus mju-1050SW, Nikon D200 and Canon Ixus70 respectively.}
+	\caption{Prediction of images from different devices of same model. The numbers from top to bottom indicate the number of images classified as Olympus mju-1050SW, Nikon D200 and Canon Ixus70 respectively.}
 	\label{fig:ins result}
 \end{figure}
 
@@ -514,7 +517,7 @@ The other images, namely 380 full sized images from Canon Ixus70, 380 from Nikon
 	\resizebox{!}{!}{
 		{\input{images/ins_conf.tex}}
 	}
-	\caption{Mean prediction confidence to images from different devices of same model.}
+	\caption{Prediction confidence of images from different devices of same model.}
 	\label{fig:ins confidence}
 \end{figure}
 
@@ -541,9 +544,9 @@ We have demonstrated that the classification accuracy and the prediction confide
 
 In this report, we presented how a CNN-based camera model classifier behaves in the presence of three different types of data, namely, unseen data, post-processed data, and data from different devices.
 
-By suppressing image content and extracting high frequency traces from camera using constrained convolutional layer, the CNN architecture has at least 99.69\% accuracy as well as mean confidence of 1 for the correct label in the baseline experiment. It makes our results independent to image's scenes and objects. However, we showed that our CNN is not robust to the out-of-distribution data in most of the experiments. It tends to classify unseen model images to the model with the same manufacturer as the input and makes decision with high confidence regardless of the ground truth. In the post-processing experiment, we have demonstrated that our CNN is robust to JPEG compression artifacts only for Nikon D200, but it doesn't generalize to the other two models. Furthermore, the CNN tends to classify noisy images as they are from Canon Ixus70 and blurred images as they are from Nikon D200 with high confidence. The only exception is the device-dependent characteristics experiment, our classifier shows similar accuracy and mean confidence compared to the baseline experiment, which means it is robust to device-dependent characteristics.
+By suppressing image’s content and extracting high frequency traces from camera using constrained convolutional layer, the CNN architecture has at least 99.69\% accuracy as well as mean confidence of 1 for the correct label in the baseline experiment. It makes our results independent to image's scenes and objects. However, we showed that our CNN is not robust to the out-of-distribution data in most of the experiments. It tends to classify images from unseen model to the model with the same manufacturer as the input and makes decisions with high confidence regardless of the ground truth. In the post-processing experiment, we have demonstrated that our CNN is robust to JPEG compression artifacts only for Nikon D200, but it doesn't generalize to the other two models. Furthermore, the CNN tends to classify noisy images as they are from Canon Ixus70 and blurred images as they are from Nikon D200 with high confidence. The only exception is the device-dependent characteristics experiment, our classifier shows similar accuracy and mean confidence compared to the baseline experiment, which means it is robust to device-dependent characteristics.
 
-These are preliminary experiments. There are many aspects to be further investigated in the future work, such as the method of evaluating the prediction confidence, effects of more different image manipulation techniques to the robustness and effects of camera parameters while shooting.	
+These are preliminary experiments. There are many aspects to be further investigated in the future work, such as the method of evaluating the prediction confidence, effects to the robustness of more different image manipulation techniques and the effects of camera parameters while shooting photos.	
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\bibliographystyle{abbrv}
